2013-07-12, S3QL 2.2

  * Eliminated a race condition that resulted in an apparent loss of
    remote metadata when the mount.s3ql process was interrupted after
    renaming the remote metadata but before having completely uploaded
    the local metadata.

  * Attempting to run mount.s3ql with --allow-user but without having
    the necessary permissions no longer results in the file system
    being marked as needing fsck.

  * The S3 backend now deletes multiple storage objects using one
    request if possible, reducing latency, traffic and number of
    requests to S3.

  * S3QL is now able to detect server errors and redirections before
    all data has been sent to the server. This avoids pointless data
    transfers and should fix a problem with S3QL operating very slow
    when operating on recently created storage buckets/containers.

  * There is a new 'rackspace' backend that allows specification of
    the object storage region in the storage URL. The rackspace
    backend also uses a different authentication API than the swift
    backend (which can still be used for Rackspace as well). When
    using the 'rackspace' backend, use your regular Rackspace password
    instead of the API key as the backend password.

  * The mount.s3ql --compress option now allows specification of the
    compression level in addition to the compression algorithm.
  
2013-06-14, S3QL 2.1 (beta)

  * S3QL now uses SSL connections by default.

  * S3QL now verifies server certificates when using SSL connections.

  * There is a new --no-ssl option that now works for every backend.

  * The Amazon S3 and Swift backends are now working again (regression
    was introduced in 2.0-beta).

2013-05-12, S3QL 2.0 (beta)

  * S3QL now requires Python 3.3 or newer.

  * S3QL now requires the pycrypto third-party Python module.

  * S3QL now requires at least version 0.39 of the llfuse Python
    module.

  * Cycling of metadata backups when using the local backend now